# WeClip

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  run.sh  test.url
docs/: README_en.md
src/: main_ui.py
src/app/: browser.py  wx.py
src/app/export/: base.py  factory.py  html.py  md.py  pdf.py
src/app/ui/: async_worker.py  logger_handler.py  selection_dialog.py  wx_ui copy.py  wx_ui.py
src/app/utils/: __init__.py  logger.py
